KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
@@ -1,13 +1,14 @@
 
 การคืนอากรตามมาตรา ๒๙ แห่งพระราชบัญญัติศุลกากร พ.ศ.๒๕๖๐ 
 ===
-การคืนอากรตามมาตรา 29 แห่งพระราชบัญญัติศุลกากร พ.ศ.2560 เป็นการคืนเงินอากรขาเข้าที่ผู้นำของเข้า (ผู้มีสิทธิขอคืนอากร) ที่ได้ชำระไว้ด้วยเงินสดและ/หรือ ใช้หนังสือค้ำประกันของธนาคาร หรือระบบ e-Guarantee หรือ หนังสือค้ำประกันของกระทรวงการคลัง วางประกันแทนการชำระอากรขาเข้าด้วยเงินสด สำหรับของที่นำเข้ามาจากต่างประเทศ เพื่อใช้ผลิต หรือผสม หรือประกอบ หรือบรรจุ หรือดำเนินการด้วยวิธีอื่นใด เป็นของที่ส่งออกไปนอกราชอาณาจักรภายใน 1 ปี นับแต่วันที่นำของเข้ามาในราชอาณาจักร และต้องยื่นขอคืนอากร ภายใน 6 เดือน นับแต่วันที่ส่งของออกไป
+การคืนอากรตามมาตรา 29 แห่งพระราชบัญญัติศุลกากร พ.ศ.2560 เป็นการคืนเงินอากรขาเข้าที่ผู้นำของเข้า (ผู้มีสิทธิขอคืนอากร) ที่ได้ชำระไว้ด้วยเงินสดและ/หรือ ใช้หนังสือค้ำประกันของธนาคาร หรือระบบ e-Guarantee หรือ หนังสือค้ำประกันของกระทรวงการคลัง วางประกันแทนการชำระอากรขาเข้าด้วยเงินสด สำหรับของที่นำเข้ามาจากต่างประเทศ เพื่อใช้ผลิต หรือผสม หรือประกอบ หรือบรรจุ หรือดำเนินการด้วยวิธีอื่นใด เป็นของที่ส่งออกไปนอกราชอาณาจักร**ภายใน 1 ปี** นับแต่**วันที่นำของเข้า**มาในราชอาณาจักร และต้องยื่นขอคืนอากร **ภายใน 6 เดือน** นับแต่**วันที่ส่งของออก**ไป
 
-ทั้งนี้ ของที่นำเข้ามาในราชอาณาจักรเพื่อใช้ในการผลิต ผสม ประกอบ บรรจุ หรือดำเนินการด้วยวิธีอื่นใดตามมาตรา 29 หากโอนเข้าไปในคลังสินค้าทัณฑ์บน หรือจำหน่ายให้แก่ผู้มีสิทธิได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร หรือกฎหมายอื่น เช่น ตามกฎหมายส่งเสริมการลงทุน ตามกฎหมายการนิคมอุตสาหกรรม เป็นต้น ตามนัยข้อกฎหมายถือว่าของนั้นได้ส่งออกตามมาตรา 29 ในเวลาที่โอนหรือจำหน่ายเป็นการอำนวยความสะดวกแก่ผู้ประกอบการตามมาตรา 29 ที่จะให้ได้รับการคืนอากรสำหรับของที่นำเข้า แม้ไม่ได้ส่งออกนอกราชอาณาจักรซึ่งใช้บังคับเฉพาะกรณีโอนหรือจำหน่ายสินค้าสำเร็จรูป/กึ่งสำเร็จรูปเท่านั้น ดังนั้นผู้นำของเข้าตามมาตรา 29 สามารถยื่นขอคืนอากรสำหรับของเช่นว่านั้นได้ตามระเบียบที่อธิบดีกำหนด
+ทั้งนี้ ของที่นำเข้ามาในราชอาณาจักรเพื่อใช้ในการ**ผลิต ผสม ประกอบ บรรจุ หรือดำเนินการด้วยวิธีอื่นใด**ตามมาตรา 29 หากโอนเข้าไปในคลังสินค้าทัณฑ์บน หรือจำหน่ายให้แก่ผู้มีสิทธิได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร หรือกฎหมายอื่น เช่น ตามกฎหมายส่งเสริมการลงทุน ตามกฎหมายการนิคมอุตสาหกรรม เป็นต้น ตามนัยข้อกฎหมายถือว่าของนั้นได้ส่งออกตามมาตรา 29 ในเวลาที่โอนหรือจำหน่ายเป็นการอำนวยความสะดวกแก่ผู้ประกอบการตามมาตรา 29 ที่จะให้ได้รับการคืนอากรสำหรับของที่นำเข้า แม้ไม่ได้ส่งออกนอกราชอาณาจักรซึ่งใช้บังคับเฉพาะกรณีโอนหรือจำหน่ายสินค้าสำเร็จรูป/กึ่งสำเร็จรูปเท่านั้น ดังนั้นผู้นำของเข้าตามมาตรา 29 สามารถยื่นขอคืนอากรสำหรับของเช่นว่านั้นได้ตามระเบียบที่อธิบดีกำหนด
 
-ของที่ได้รับคืนอากรตามมาตรา ๒๙
+## ของที่ได้รับคืนอากรตามมาตรา ๒๙
 วัตถุดิบที่เห็นได้ชัดเจนว่ามีอยู่ในของที่ผลิตเพื่อส่งออก เช่น ผ้า กระดุม ซิป ด้าย ในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป เม็ดพลาสติก แผ่นพลาสติก ในผลิตภัณฑ์ประเภทพลาสติก เป็นต้น
 วัตถุดิบที่ใช้การผลิตโดยตรงที่มีอยู่ในของที่ผลิตเพื่อส่งออก แต่ไม่ปรากฏให้เห็นอย่างชัดเจน เช่นเคมีภัณฑ์ที่ใช้รักษาสภาพอาหารในผลิตภัณฑ์ประเภทอาหารกระป๋อง เคมีภัณฑ์ชนิดสเปรย์ที่ใช้ฉีดคอเสื้อให้แข็งในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป ตัวทำละลาย (Solvent) ที่ใช้ผสมกาวในผลิตภัณฑ์ประเภทเซโลเฟน (Cellophane) น้ำยากันสนิมในผลิตภัณฑ์ประเภทวงจรไฟฟ้า(I.C.) เป็นต้น
+
 วัตถุดิบจำเป็นที่ใช้ในการผลิต เช่น เคมีภัณฑ์ที่ทำให้เส้นด้ายเหนียว (Sizing Material) เคมีภัณฑ์ที่ใช้ในซักฟอก (Bleaching Agent) ในผลิตภัณฑ์ประเภท สิ่งทอ กระดาษทราย ผงขัด น้ำยาขัดเงาสักหลาด น้ำยาผสมที่ใช้ในการขัด สิ่งที่ใช้ในการขัดต่าง ๆ ชอล์ค กระดาษคาร์บอน และแบบ (Pattern) เป็นต้น
 
 ของที่ไม่ได้รับคืนอากรตามมาตรา ๒๙
@@ -51,5 +52,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExODMzMzcwNTldfQ==
+eyJoaXN0b3J5IjpbLTU4MzEyODE3M119
 -->
