KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
@@ -6,15 +6,19 @@
 ทั้งนี้ ของที่นำเข้ามาในราชอาณาจักรเพื่อใช้ในการ**ผลิต ผสม ประกอบ บรรจุ หรือดำเนินการด้วยวิธีอื่นใด**ตามมาตรา 29 หากโอนเข้าไปในคลังสินค้าทัณฑ์บน หรือจำหน่ายให้แก่ผู้มีสิทธิได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร หรือกฎหมายอื่น เช่น ตามกฎหมายส่งเสริมการลงทุน ตามกฎหมายการนิคมอุตสาหกรรม เป็นต้น ตามนัยข้อกฎหมายถือว่าของนั้นได้ส่งออกตามมาตรา 29 ในเวลาที่โอนหรือจำหน่ายเป็นการอำนวยความสะดวกแก่ผู้ประกอบการตามมาตรา 29 ที่จะให้ได้รับการคืนอากรสำหรับของที่นำเข้า แม้ไม่ได้ส่งออกนอกราชอาณาจักรซึ่งใช้บังคับเฉพาะกรณีโอนหรือจำหน่ายสินค้าสำเร็จรูป/กึ่งสำเร็จรูปเท่านั้น ดังนั้นผู้นำของเข้าตามมาตรา 29 สามารถยื่นขอคืนอากรสำหรับของเช่นว่านั้นได้ตามระเบียบที่อธิบดีกำหนด
 
 ## ของที่ได้รับคืนอากรตามมาตรา ๒๙
-วัตถุดิบที่เห็นได้ชัดเจนว่ามีอยู่ในของที่ผลิตเพื่อส่งออก เช่น ผ้า กระดุม ซิป ด้าย ในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป เม็ดพลาสติก แผ่นพลาสติก ในผลิตภัณฑ์ประเภทพลาสติก เป็นต้น
-วัตถุดิบที่ใช้การผลิตโดยตรงที่มีอยู่ในของที่ผลิตเพื่อส่งออก แต่ไม่ปรากฏให้เห็นอย่างชัดเจน เช่นเคมีภัณฑ์ที่ใช้รักษาสภาพอาหารในผลิตภัณฑ์ประเภทอาหารกระป๋อง เคมีภัณฑ์ชนิดสเปรย์ที่ใช้ฉีดคอเสื้อให้แข็งในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป ตัวทำละลาย (Solvent) ที่ใช้ผสมกาวในผลิตภัณฑ์ประเภทเซโลเฟน (Cellophane) น้ำยากันสนิมในผลิตภัณฑ์ประเภทวงจรไฟฟ้า(I.C.) เป็นต้น
 
-วัตถุดิบจำเป็นที่ใช้ในการผลิต เช่น เคมีภัณฑ์ที่ทำให้เส้นด้ายเหนียว (Sizing Material) เคมีภัณฑ์ที่ใช้ในซักฟอก (Bleaching Agent) ในผลิตภัณฑ์ประเภท สิ่งทอ กระดาษทราย ผงขัด น้ำยาขัดเงาสักหลาด น้ำยาผสมที่ใช้ในการขัด สิ่งที่ใช้ในการขัดต่าง ๆ ชอล์ค กระดาษคาร์บอน และแบบ (Pattern) เป็นต้น
+1. วัตถุดิบที่เห็นได้ชัดเจนว่ามีอยู่ในของที่ผลิตเพื่อส่งออก เช่น ผ้า กระดุม ซิป ด้าย ในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป เม็ดพลาสติก แผ่นพลาสติก ในผลิตภัณฑ์ประเภทพลาสติก เป็นต้น
 
-ของที่ไม่ได้รับคืนอากรตามมาตรา ๒๙
-เครื่องจักร เครื่องมือเครื่องใช้ที่มีลักษณะคงทนใช้ซ้ำได้ เช่น แม่พิมพ์ (Mould) เครื่องใช้ในการผลิตชนิดต่าง ๆ เช่น ลูกกลิ้งบดแร่ (Grinding Ball) ที่ใช้ในการบดแร่ เครื่องมือเครื่องใช้ที่ทำจากทังสเตนคาร์ไบด์ (Tungsten Carbide) ที่ใช้ในการผลิตนาฬิกา เป็นต้น
-เชื้อเพลิงที่ใช้ในการผลิต และผลิตภัณฑ์หล่อลื่นเพื่อใช้สำหรับเครื่องจักรที่ใช้ในการผลิต เช่น น้ำมัน ไม้ฟืน ถ่านหิน แก๊ส และน้ำมันหล่อลื่น เป็นต้น
-ข้อกฎหมาย
+2. วัตถุดิบที่ใช้การผลิตโดยตรงที่มีอยู่ในของที่ผลิตเพื่อส่งออก แต่ไม่ปรากฏให้เห็นอย่างชัดเจน เช่นเคมีภัณฑ์ที่ใช้รักษาสภาพอาหารในผลิตภัณฑ์ประเภทอาหารกระป๋อง เคมีภัณฑ์ชนิดสเปรย์ที่ใช้ฉีดคอเสื้อให้แข็งในผลิตภัณฑ์เสื้อผ้าสำเร็จรูป ตัวทำละลาย (Solvent) ที่ใช้ผสมกาวในผลิตภัณฑ์ประเภทเซโลเฟน (Cellophane) น้ำยากันสนิมในผลิตภัณฑ์ประเภทวงจรไฟฟ้า(I.C.) เป็นต้น
+
+3. วัตถุดิบจำเป็นที่ใช้ในการผลิต เช่น เคมีภัณฑ์ที่ทำให้เส้นด้ายเหนียว (Sizing Material) เคมีภัณฑ์ที่ใช้ในซักฟอก (Bleaching Agent) ในผลิตภัณฑ์ประเภท สิ่งทอ กระดาษทราย ผงขัด น้ำยาขัดเงาสักหลาด น้ำยาผสมที่ใช้ในการขัด สิ่งที่ใช้ในการขัดต่าง ๆ ชอล์ค กระดาษคาร์บอน และแบบ (Pattern) เป็นต้น
+
+## ของที่ไม่ได้รับคืนอากรตามมาตรา ๒๙
+
+1. เครื่องจักร เครื่องมือเครื่องใช้ที่มีลักษณะคงทนใช้ซ้ำได้ เช่น แม่พิมพ์ (Mould) เครื่องใช้ในการผลิตชนิดต่าง ๆ เช่น ลูกกลิ้งบดแร่ (Grinding Ball) ที่ใช้ในการบดแร่ เครื่องมือเครื่องใช้ที่ทำจากทังสเตนคาร์ไบด์ (Tungsten Carbide) ที่ใช้ในการผลิตนาฬิกา เป็นต้น
+2. เชื้อเพลิงที่ใช้ในการผลิต และผลิตภัณฑ์หล่อลื่นเพื่อใช้สำหรับเครื่องจักรที่ใช้ในการผลิต เช่น น้ำมัน ไม้ฟืน ถ่านหิน แก๊ส และน้ำมันหล่อลื่น เป็นต้น
+
+**ข้อกฎหมาย**
 มาตรา 29, มาตรา 30 และ มาตรา 31 แห่งพระราชบัญญัติศุลกากร พ.ศ.2560
 
 ขั้นตอนการขอคืนอากรวัตถุดิบที่นำเข้ามาผลิตเพื่อการส่งออกตามมาตรา ๒๙
@@ -52,5 +56,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4MzEyODE3M119
+eyJoaXN0b3J5IjpbLTE2OTU2Nzc1NzhdfQ==
 -->
