KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
@@ -44,19 +44,19 @@
 * ฝ่ายคืนอากรที่ 2 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 64-83 และ 93-97 ชั้น 3 โทร.02 667 6000 หรือ 02 667 7000 ต่อ 5923 
 * ฝ่ายคืนอากรที่ 3 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 84-85 ชั้น 3 โทร.02 667 6603 
 * ฝ่ายคืนอากรที่ 4 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 25-40 ชั้น 5 โทร.02 667 6559 
-ฝ่ายคืนอากรที่ 5 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 86-92 ชั้น 3 โทร.02 667 7064 , 02 667 6588 
-ฝ่ายคืนอากรที่ 6 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 1-24 ชั้น 3 โทร.02 667 6561, 02 667 7484     
+* ฝ่ายคืนอากรที่ 5 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 86-92 ชั้น 3 โทร.02 667 7064 , 02 667 6588 
+* ฝ่ายคืนอากรที่ 6 ผลิตภัณฑ์ส่งออกที่รับผิดชอบ พิกัดศุลกากรตอนที่ 1-24 ชั้น 3 โทร.02 667 6561, 02 667 7484     
  
 
-วันที่ปรับปรุงล่าสุด : 2 ตุลาคม 2561 10:23:17
-จำนวนผู้เข้าชม : 208,940
-สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนคืนอากรเพื่อการส่งออก กองสิทธิประโยชน์ทางภาษีอากร (สคอ. กสอ.)
+> วันที่ปรับปรุงล่าสุด : 2 ตุลาคม 2561 10:23:17
+
+* สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนคืนอากรเพื่อการส่งออก กองสิทธิประโยชน์ทางภาษีอากร (สคอ. กสอ.)
 กรมศุลกากร เลขที่ 1 ถ.สุนทรโกษา คลองเตย กทม. 10110
-หมายเลขโทรศัพท์ : 0-2667-7060 และ 0-2667-5151
-อีเมล์ : 82000100@customs.go.th
+* หมายเลขโทรศัพท์ : 0-2667-7060 และ 0-2667-5151
+* อีเมล์ : 82000100@customs.go.th
 
 
-> Written with [StackEdit](https://stackedit.io/).
+> Written with [di](http://www.customs.go.th/cont_strc_simple.php?ini_content=tax_incentive_160928_01&ini_menu=menu_tax_incentive&lang=th&top_menu=menu_homepage&left_menu=menu_tax_incentive_160928_02&lang=th&left_menu=menu_business_160421_03_160725_02).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI4NDg3MjE3XX0=
+eyJoaXN0b3J5IjpbMzkwMTAzNTA2LDEyODQ4NzIxN119
 -->
