KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/มาตรา 29.md
@@ -56,7 +56,7 @@
 * อีเมล์ : 82000100@customs.go.th
 
 
-> Written with [di](http://www.customs.go.th/cont_strc_simple.php?ini_content=tax_incentive_160928_01&ini_menu=menu_tax_incentive&lang=th&top_menu=menu_homepage&left_menu=menu_tax_incentive_160928_02&lang=th&left_menu=menu_business_160421_03_160725_02).
+> Source :  [กรมศุลกากร](http://www.customs.go.th/cont_strc_simple.php?ini_content=tax_incentive_160928_01&ini_menu=menu_tax_incentive&lang=th&top_menu=menu_homepage&left_menu=menu_tax_incentive_160928_02&lang=th&left_menu=menu_business_160421_03_160725_02).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzkwMTAzNTA2LDEyODQ4NzIxN119
+eyJoaXN0b3J5IjpbMzc3ODk5NTM4LDEyODQ4NzIxN119
 -->
