KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
@@ -1,6 +1,6 @@
 เขตประกอบการเสรี (FREETRADE ZONE)
 ====
-**หลักการทั่วไป**  
+## หลักการทั่วไป
 พระราชบัญญัติการนิคมอุตสาหกรรมแห่งประเทศไทย พ.ศ. 2522 ได้มีการจัดตั้ง การนิคมอุตสาหกรรมแห่งประเทศไทยขึ้นเป็นรัฐวิสาหกิจสังกัดกระทรวงอุตสาหกรรมมีชื่อย่อว่า "กนอ." มีวัตถุประสงค์ในการจัดตั้งหลายประการ โดยเริ่มจากการจัดหาที่ดินที่เหมาะสมเพื่อจัดตั้ง หรือขยายนิคมอุตสาหกรรม หรือเพื่อดำเนินธุรกิจอื่นที่จะเป็นประโยชน์ ดำเนินการปรับปรุงที่ดินเพื่อให้บริการ ตลอดจนจัดสิ่งอำนวยความสะดวกในการดำเนินงาน รวมทั้งสาธารณูปโภคต่างๆให้แก่ผู้ประกอบกิจการอุตสาหกรรมในเขตนิคมอุตสาหกรรม พื้นที่เขตนิคมอุตสาหกรรมแบ่งออกเป็น 2 ลักษณะ คือ
 
 1.  พื้นที่เขตอุตสาหกรรมทั่วไป อันเป็นเขตพื้นที่ที่กำหนดไว้สำหรับการประกอบอุตสาหกรรมและกิจการอื่นที่เป็นประโยชน์หรือเกี่ยวเนื่องกับการประกอบอุตสาหกรรม
@@ -23,7 +23,7 @@
 เพื่อการส่งเสริมการส่งออกแก่ผู้ประกอบการทั้งในเขตอุตสาหกรรมทั่วไป และเขตประกอบการเสรี การนิคมอุตสาหกรรมแห่งประเทศไทยได้ให้สิทธิประโยชน์ทางด้านภาษีอากรแก่ผู้ประกอบการในเขตประกอบการเสรี และเขตอุตสาหกรรมทั่วไปของการนิคมอุตสาหกรรมแห่งประเทศไทย โดยกรมศุลกากรจะเป็นผู้กำหนดระเบียบปฏิบัติสำหรับการปฏิบัติในเขตประกอบการเสรีตามบทบาทหน้าที่ในการควบคุมดูแล และรับผิดชอบในเรื่องภาษีอากรของรัฐ
 
   
-**กฎหมายและระเบียบที่เกี่ยวข้องกับเขตประกอบการเสรี**
+## กฎหมายและระเบียบที่เกี่ยวข้องกับเขตประกอบการเสรี
 
 1.  พระราชบัญญัติการนิคมอุตสาหกรรมแห่งประเทศไทย พ.ศ. 2522
 2.  พระราชบัญญัติการนิคมอุตสาหกรรมแห่งประเทศไทย (ฉบับที่ 3) พ.ศ. 2539
@@ -33,7 +33,7 @@
 6.  ประกาศกรมศุลกากรที่ 43/2551 เรื่อง หลักเกณฑ์และพิธีการสำหรับเขตประกอบการเสรีตามกฎหมายว่าด้วยการนิคมอุตสาหกรรมแห่งประเทศไทย
 
   
-**สิทธิประโยชน์ สิทธิประโยชน์ที่ไม่เกี่ยวกับภาษีอากรในเขตประกอบการเสรี**
+## สิทธิประโยชน์ สิทธิประโยชน์ที่ไม่เกี่ยวกับภาษีอากรในเขตประกอบการเสรี
 
 1.  ผู้ประกอบอุตสาหกรรม หรือพาณิชยกรรม ทั้งที่เป็นคนไทยและคนต่างด้าวอาจได้รับอนุญาต ให้ถือกรรมสิทธิ์ในที่ดินในนิคมอุตสาหกรรม เพื่อประกอบกิจการได้ตามจำนวนเนื้อที่ที่คณะกรรมการเห็นสมควร แม้ว่าจะเกินกำหนดที่จะพึงมีได้ตามกฎหมายอื่น
 2.  ผู้ประกอบอุตสาหกรรม หรือพาณิชยกรรม จะได้รับอนุญาตให้นำคนต่างด้าวซึ่งเป็นช่างฝีมือ ผู้ชำนาญการ คู่สมรสและบุคคลซึ่งอยู่ในอุปการะ เข้ามาและอยู่ในราชอาณาจักรตามจำนวน และภายในกำหนดระยะเวลาที่คณะกรรมการเห็นสมควร
@@ -41,7 +41,7 @@
 4.  ผู้ประกอบอุตสาหกรรม หรือพาณิชยกรรม ซึ่งมิภูมิลำเนานอกราชอาณาจักรจะได้รับอนุญาตให้นำหรือส่งเงินออกไปนอกราชอาณาจักรเป็นเงินตราต่างประเทศได้ เมื่อเงินนั้นเป็นเงินทุนที่นำเข้ามา เงินปันผล หรือผลประโยชน์ที่เกิดจากเงินทุนนั้น เงินกู้ต่างประเทศที่นำมาลงทุน และเงินที่ผู้ประกอบอุตสาหกรรม หรือผู้ประกอบการพาณิชยกรรมมีข้อผูกพันกับต่างประเทศตามสัญญาเกี่ยวกับการใช้สิทธิ และบริการต่างๆ
 
   
-**สิทธิประโยชน์ด้านภาษีอากรในเขตประกอบการเสรี**
+## สิทธิประโยชน์ด้านภาษีอากรในเขตประกอบการเสรี
 
 1.  ได้รับยกเว้นค่าธรรมเนียมพิเศษตามกฎหมายว่าด้วยการส่งเสริมการลงทุน อากรขาเข้า ภาษีมูลค่าเพิ่มและภาษีสรรพสามิตสำหรับเครื่องจักร อุปกรณ์เครื่องมือและเครื่องใช้ รวมทั้งส่วนประกอบของสิ่งของดังกล่าวที่จำเป็นในการผลิตและของที่ใช้ในการสร้างโรงงาน หรืออาคาร
 2.  ได้รับยกเว้นค่าธรรมเนียมพิเศษตามกฎหมายว่าด้วยการส่งเสริมการลงทุน รวมทั้งอากรขาเข้าภาษีมูลค่าเพิ่มและภาษีสรรพสามิตสำหรับของที่นำเข้ามาเพื่อใช้ในการผลิตสินค้า หรือเพื่อพาณิชยกรรมสำหรับของที่นำเข้ามาในราชอาณาจักรและนำเข้าไปในเขตประกอบการเสรี
@@ -94,5 +94,5 @@ http://www.ieat.go.th
 **หมายเลขโทรศัพท์ :** 02-667-5963 หรือ 02-667-6623  
 **อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTE4ODMyMDE5XX0=
+eyJoaXN0b3J5IjpbLTE1ODg4MjkzMzVdfQ==
 -->
