KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
@@ -52,22 +52,22 @@
 7.  การนำของเข้ามาในประเทศ หรือวัตถุดิบภายในประเทศ และนำเข้าไปในเขตประกอบการเสรีเพื่อผลิต ผสม ประกอบบรรจุ หรือดำเนินการอื่นใดโดยมีวัตถุประสงค์เพื่อส่งออก ให้ยกเว้นไม่อยู่ภายในบังคับของกฎหมายว่าด้วยการควบคุมการนำเข้าการส่งออกไปนอกราชอาณาจักร การครอบครอง หรือ การใช้ประโยชน์ การควบคุมมาตรฐาน หรือคุณภาพ การประทับตราหรือเครื่องหมายใด ๆ แก่ของนั้น แต่ทั้งนี้ไม่รวมถึงกฎหมายว่าด้วยศุลกากร แต่ถ้าของดังกล่าวก่อให้เกิด หรืออาจก่อให้เกิดผลกระทบต่อความมั่นคง สุขภาพอนามัยของประชาชน สิ่งแวดล้อม หรือมีพันธกรณีตามข้อผูกพันตามสัญญาหรือความตกลงระหว่างประเทศ ให้รัฐมนตรีมีอำนาจออกกฎกระทรวงกำหนดชนิด หรือประเภทของของนั้นมิให้ได้รับยกเว้นตามกฎหมายดังกล่าวด้วยก็ได้ มาตรา 49 แห่งพระราชบัญญัติการนิคมอุตสาหกรรมแห่งประเทศไทย พ.ศ. 2522
 
   
-**พิธีการศุลกากรที่ควรทราบสำหรับผู้ประกอบการในเขตประกอบการเสรี**
+## พิธีการศุลกากรที่ควรทราบสำหรับผู้ประกอบการในเขตประกอบการเสรี
 
 1.  พิธีการศุลกากรในเขตประกอบการเสรี (เขตอุตสาหกรรมส่งออกเดิม)
 
-1.  ผู้ประกอบการยื่นใบขนสินค้าขาเข้าเพื่อนำของเข้าไปในเขตประกอบการเสรี โดยต้องมีหนังสือรับรองจากการนิคมอุตสาหกรรมแห่งประเทศไทย(กนอ.) ว่าเป็นผู้ประกอบการในเขตประกอบการเสรีแนบมาด้วย ส่วนกรณีเป็นการนำเข้าตามมาตรา48 แห่งพ.ร.บ.การนิคมอุตสาหกรรมแห่งประเทศไทย พ.ศ. 2522 ต้องมีหนังสือยกเว้นอากรจากการนิคมอุตสาหกรรมแห่งประเทศไทยเพิ่มเติมด้วย
-2.  ผู้นำของเข้าซึ่งการนิคมอุตสาหกรรมแห่งประเทศไทยมีหนังสือรับรองว่าเป็นผู้ประกอบการในนิคมอุตสาหกรรม ซึ่งเป็นผู้ดำเนินการขนย้ายสินค้า จะต้องทำหนังสือสัญญาประกันไว้กับกรมศุลกากรตามแบบที่กำหนด และการขนส่งต้องไปตาม เส้นทางที่กรมศุลกากรกำหนดด้วย
+	- ผู้ประกอบการยื่นใบขนสินค้าขาเข้าเพื่อนำของเข้าไปในเขตประกอบการเสรี โดยต้องมีหนังสือรับรองจากการนิคมอุตสาหกรรมแห่งประเทศไทย(กนอ.) ว่าเป็นผู้ประกอบการในเขตประกอบการเสรีแนบมาด้วย ส่วนกรณีเป็นการนำเข้าตามมาตรา48 แห่งพ.ร.บ.การนิคมอุตสาหกรรมแห่งประเทศไทย พ.ศ. 2522 ต้องมีหนังสือยกเว้นอากรจากการนิคมอุตสาหกรรมแห่งประเทศไทยเพิ่มเติมด้วย
+	- ผู้นำของเข้าซึ่งการนิคมอุตสาหกรรมแห่งประเทศไทยมีหนังสือรับรองว่าเป็นผู้ประกอบการในนิคมอุตสาหกรรม ซึ่งเป็นผู้ดำเนินการขนย้ายสินค้า จะต้องทำหนังสือสัญญาประกันไว้กับกรมศุลกากรตามแบบที่กำหนด และการขนส่งต้องไปตาม เส้นทางที่กรมศุลกากรกำหนดด้วย
 
-3.  พิธีการศุลกากรในเขตอุตสาหกรรมทั่วไป
+2.  พิธีการศุลกากรในเขตอุตสาหกรรมทั่วไป
 ถ้าผู้ประกอบการในเขตอุตสาหกรรมทั่วไปประสงค์จะปฏิบัติพิธีการ ณ สำนักงานศุลกากรประจำนิคมอุตสาหกรรมให้ปฏิบัติเช่นเดียวกับพิธีการศุลกากรในเขตประกอบการเสรี โดยมีหลักฐานแสดงว่าเป็นผู้ประกอบการเขตอุตสาหกรรมทั่วไปของการนิคมอุตสาหกรรม มาแสดงต่อเจ้าหน้าที่ด้วย4.  ความรับผิดชอบในการขนส่งออกจากท่าหรือที่นำเข้ามายังนิคมอุตสาหกรรม
 ผู้นำของเข้าจะต้องเป็นผู้รับผิดชอบหากเกิดความเสียหายต่อค่าภาษีอากร ค่าภาระติดพันหรือความเสียหายอื่นใดตามที่ได้ทำสัญญาประกันไว้ต่อกรมศุลกากร5.  การนำของออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในประเทศ
 
-1.  ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศได้ โดยผู้มีภาระหน้าที่ในการชำระค่าภาษีอากรต้องยื่นใบขนสินค้าขาเข้า และหนังสืออนุญาตการนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศของ กนอ. ต่อสำนักงานศุลกากรประจำนิคมฯ
-2.  สำหรับบัญชีราคาสินค้า ให้สำแดงราคาซื้อขายเป็นเงินบาท โดยกรมศุลกากรจะดำเนินการกับใบขนสินค้าขาเข้าเสมือนหนึ่งการนำของเข้าจากต่างประเทศ และของนั้นจะต้องเสียค่าธรรมเนียมพิเศษตามกฎหมายว่าด้วยการส่งเสริมการลงทุน อากรขาเข้า และภาษีสรรพสามิต ภาษีเพื่อมหาดไทย และภาษีมูลค่าเพิ่มตามสภาพ ราคา และอัตราภาษีอากรที่เป็นอยู่ในวันที่นำของออกจากเขตประกอบการเสรี โดยถือเสมือนว่าได้นำเข้ามาในราชอาณาจักรในวันที่นำออกจากเขตประกอบการเสรี
-3.  ราคาพึงประเมินหรือราคาที่ใช้เป็นเกณฑ์คำนวณค่าภาษีอากร สำหรับของที่นำออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในราชอาณาจักรนั้น ให้ใช้ราคาศุลกากร ตามมาตรา 2 แห่ง พ.ร.บ.ศุลกากร พ.ศ. 2469
+	-   ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศได้ โดยผู้มีภาระหน้าที่ในการชำระค่าภาษีอากรต้องยื่นใบขนสินค้าขาเข้า และหนังสืออนุญาตการนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศของ กนอ. ต่อสำนักงานศุลกากรประจำนิคมฯ
+	- สำหรับบัญชีราคาสินค้า ให้สำแดงราคาซื้อขายเป็นเงินบาท โดยกรมศุลกากรจะดำเนินการกับใบขนสินค้าขาเข้าเสมือนหนึ่งการนำของเข้าจากต่างประเทศ และของนั้นจะต้องเสียค่าธรรมเนียมพิเศษตามกฎหมายว่าด้วยการส่งเสริมการลงทุน อากรขาเข้า และภาษีสรรพสามิต ภาษีเพื่อมหาดไทย และภาษีมูลค่าเพิ่มตามสภาพ ราคา และอัตราภาษีอากรที่เป็นอยู่ในวันที่นำของออกจากเขตประกอบการเสรี โดยถือเสมือนว่าได้นำเข้ามาในราชอาณาจักรในวันที่นำออกจากเขตประกอบการเสรี
+	- ราคาพึงประเมินหรือราคาที่ใช้เป็นเกณฑ์คำนวณค่าภาษีอากร สำหรับของที่นำออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในราชอาณาจักรนั้น ให้ใช้ราคาศุลกากร ตามมาตรา 2 แห่ง พ.ร.บ.ศุลกากร พ.ศ. 2469
 
-7.  การส่งของออกจากเขตประกอบการเสรีไปแสดงต่างประเทศโดยส่วนราชการ
+5.  การส่งของออกจากเขตประกอบการเสรีไปแสดงต่างประเทศโดยส่วนราชการ
 
 1.  ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อส่งออกไปแสดงต่างประเทศโดยส่วนราชการ ทั้งนี้ ผู้ประกอบการดังกล่าวต้องได้รับอนุญาตจาก กนอ. ให้ส่งของไปแสดง ณ ต่างประเทศ ในนามของส่วนราชการ และยื่นคำขอตามแบบที่กรมศุลกากรกำหนด พร้อมสำเนา 1 ฉบับ ต่อหน่วยงานศุลกากร ประจำนิคมฯ ตรวจสอบ พร้อมทั้ง ทำสัญญาประกันต่อกรมศุลกากรตามแบบที่กำหนด ทั้งนี้ เงินประกันตามสัญญาประกันจะต้องให้คุ้มค่าภาษีอากรของของตามรายการ ในหนังสือที่ยื่นต่อกรมศุลกากรโดยบวกเพิ่มอีกร้อยละ 20 และให้ผู้ประกอบการค้ำประกันตนเองได้
 2.  เมื่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรม พิจารณาอนุญาตแล้วจะคืนต้นฉบับหนังสือให้คืนแก่ผู้ประกอบการ เพื่อใช้กำกับของที่นำออกจากเขตประกอบการเสรีนำส่งมอบต่อส่วนราชการเพื่อส่งออกไปนอกราชอาณาจักร
@@ -94,5 +94,5 @@ http://www.ieat.go.th
 **หมายเลขโทรศัพท์ :** 02-667-5963 หรือ 02-667-6623  
 **อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1ODg4MjkzMzVdfQ==
+eyJoaXN0b3J5IjpbLTEwMjgxMjg2MTBdfQ==
 -->
