--- a/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
@@ -69,18 +69,18 @@
 
 5.  การส่งของออกจากเขตประกอบการเสรีไปแสดงต่างประเทศโดยส่วนราชการ
 
-1.  ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อส่งออกไปแสดงต่างประเทศโดยส่วนราชการ ทั้งนี้ ผู้ประกอบการดังกล่าวต้องได้รับอนุญาตจาก กนอ. ให้ส่งของไปแสดง ณ ต่างประเทศ ในนามของส่วนราชการ และยื่นคำขอตามแบบที่กรมศุลกากรกำหนด พร้อมสำเนา 1 ฉบับ ต่อหน่วยงานศุลกากร ประจำนิคมฯ ตรวจสอบ พร้อมทั้ง ทำสัญญาประกันต่อกรมศุลกากรตามแบบที่กำหนด ทั้งนี้ เงินประกันตามสัญญาประกันจะต้องให้คุ้มค่าภาษีอากรของของตามรายการ ในหนังสือที่ยื่นต่อกรมศุลกากรโดยบวกเพิ่มอีกร้อยละ 20 และให้ผู้ประกอบการค้ำประกันตนเองได้
-2.  เมื่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรม พิจารณาอนุญาตแล้วจะคืนต้นฉบับหนังสือให้คืนแก่ผู้ประกอบการ เพื่อใช้กำกับของที่นำออกจากเขตประกอบการเสรีนำส่งมอบต่อส่วนราชการเพื่อส่งออกไปนอกราชอาณาจักร
-3.  เมื่อส่วนราชการนั้นๆ ได้ส่งของออกไปนอกราชอาณาจักรแล้ว ผู้ประกอบการต้องยื่นหนังสือรับรองของส่วนราชการนั้นว่าได้ส่งของออกไปจริงต่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรม ภายใน 30 วัน นับแต่วันที่ส่วนราชการนั้นๆ ได้ส่งของออกมิฉะนั้น ให้ถือว่าผิดสัญญาประกันและกรมศุลกากรจะดำเนินการบังคับสัญญาประกันทันที
+	- ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อส่งออกไปแสดงต่างประเทศโดยส่วนราชการ ทั้งนี้ ผู้ประกอบการดังกล่าวต้องได้รับอนุญาตจาก กนอ. ให้ส่งของไปแสดง ณ ต่างประเทศ ในนามของส่วนราชการ และยื่นคำขอตามแบบที่กรมศุลกากรกำหนด พร้อมสำเนา 1 ฉบับ ต่อหน่วยงานศุลกากร ประจำนิคมฯ ตรวจสอบ พร้อมทั้ง ทำสัญญาประกันต่อกรมศุลกากรตามแบบที่กำหนด ทั้งนี้ เงินประกันตามสัญญาประกันจะต้องให้คุ้มค่าภาษีอากรของของตามรายการ ในหนังสือที่ยื่นต่อกรมศุลกากรโดยบวกเพิ่มอีกร้อยละ 20 และให้ผู้ประกอบการค้ำประกันตนเองได้
+	- เมื่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรม พิจารณาอนุญาตแล้วจะคืนต้นฉบับหนังสือให้คืนแก่ผู้ประกอบการ เพื่อใช้กำกับของที่นำออกจากเขตประกอบการเสรีนำส่งมอบต่อส่วนราชการเพื่อส่งออกไปนอกราชอาณาจักร
+	- เมื่อส่วนราชการนั้นๆ ได้ส่งของออกไปนอกราชอาณาจักรแล้ว ผู้ประกอบการต้องยื่นหนังสือรับรองของส่วนราชการนั้นว่าได้ส่งของออกไปจริงต่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรม ภายใน 30 วัน นับแต่วันที่ส่วนราชการนั้นๆ ได้ส่งของออกมิฉะนั้น ให้ถือว่าผิดสัญญาประกันและกรมศุลกากรจะดำเนินการบังคับสัญญาประกันทันที
 
-9.  การนำของออกจากเขตประกอบการเสรีเพื่อการอื่นเป็นการชั่วคราว
+6.  การนำของออกจากเขตประกอบการเสรีเพื่อการอื่นเป็นการชั่วคราว
 
-1.  ผู้ประกอบการสามารถนำของในเขตประกอบการเสรีออกจากเขตประกอบการเสรีเป็นการชั่วคราว เพื่อซ่อมแซม ดัดแปลง ปรับปรุง หรือเพื่อการอื่นตามความจำเป็น ได้โดยยื่นคำร้องต่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรมและทำสัญญาประกันต่อกรมศุลกากรตามแบบที่กำหนด ทั้งนี้ เงินประกันตามสัญญาประกันจะต้องให้คุ้มค่าภาษีอากร ของตามรายการในคำร้อง โดยบวกเพิ่มอีกร้อยละ 20
-2.  กรณีผู้ประกอบการไม่สามารถนำของที่นำออกไปจากเขตประกอบการเสรี กลับเข้าไปในเขตประกอบการเสรี ตามคำรับรองที่ให้ไว้ ผู้ประกอบการนั้นสามารถยื่นคำร้องขอขยายระยะเวลานำของกลับเข้ามาในเขตประกอบการเสรีได้เพียงครั้งเดียว และมีระยะเวลาไม่เกินกว่าที่ขอนำของออกไปในครั้งก่อนเว้นแต่มีเหตุจำเป็นอันสมควรก็ให้ขยายระยะเวลาเกินกว่า 1 ครั้ง
-3.  ถ้าผู้ประกอบการรายใดไม่ปฏิบัติตามคำรับรองที่ให้ไว้ ผู้ประกอบการรายนั้นต้องชำระค่าภาษีอากรพร้อมเงินเพิ่มร้อยละ 1 ต่อเดือน นับจากวันที่นำของออกจนถึงวันที่นำเงินมาชำระให้เสร็จสิ้นภายใน 15 วัน นับแต่วันที่ครบกำหนด
+	- ผู้ประกอบการสามารถนำของในเขตประกอบการเสรีออกจากเขตประกอบการเสรีเป็นการชั่วคราว เพื่อซ่อมแซม ดัดแปลง ปรับปรุง หรือเพื่อการอื่นตามความจำเป็น ได้โดยยื่นคำร้องต่อสำนักงานศุลกากรประจำนิคมอุตสาหกรรมและทำสัญญาประกันต่อกรมศุลกากรตามแบบที่กำหนด ทั้งนี้ เงินประกันตามสัญญาประกันจะต้องให้คุ้มค่าภาษีอากร ของตามรายการในคำร้อง โดยบวกเพิ่มอีกร้อยละ 20
+	- กรณีผู้ประกอบการไม่สามารถนำของที่นำออกไปจากเขตประกอบการเสรี กลับเข้าไปในเขตประกอบการเสรี ตามคำรับรองที่ให้ไว้ ผู้ประกอบการนั้นสามารถยื่นคำร้องขอขยายระยะเวลานำของกลับเข้ามาในเขตประกอบการเสรีได้เพียงครั้งเดียว และมีระยะเวลาไม่เกินกว่าที่ขอนำของออกไปในครั้งก่อนเว้นแต่มีเหตุจำเป็นอันสมควรก็ให้ขยายระยะเวลาเกินกว่า 1 ครั้ง
+	- ถ้าผู้ประกอบการรายใดไม่ปฏิบัติตามคำรับรองที่ให้ไว้ ผู้ประกอบการรายนั้นต้องชำระค่าภาษีอากรพร้อมเงินเพิ่มร้อยละ 1 ต่อเดือน นับจากวันที่นำของออกจนถึงวันที่นำเงินมาชำระให้เสร็จสิ้นภายใน 15 วัน นับแต่วันที่ครบกำหนด
 
   
-12.  การนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี
+7.  การนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี
 ผู้ประกอบการสามารถการนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี ได้โดยยื่นคำร้องขอนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี (กศก.122) ต่อเจ้าหน้าที่ศุลกากรประจำนิคมอุตสาหกรรม13.  ของที่นำเข้าเขตประกอบการเสรีเพื่อซ่อมและนำกลับออกไปโดยยกเว้นอากรตาม พ.ร.บ. พิกัดอัตราศุลกากร พ.ศ. 2530 ภาค 4 ประเภท 2
 จะต้องเป็นของที่นำเข้ามาในราชอาณาจักรโดยชำระภาษีอากรครบถ้วนแล้ว และจะต้องได้รับอนุญาตจากการนิคมอุตสาหกรรมแห่งประเทศไทย (กนอ.) ด้วย14.  ของที่นำเข้าเขตประกอบการเสรี และนำกลับเข้ามาในราชอาณาจักรโดยได้รับยกเว้นอากร
 ของในราชอาณาจักรหรือของจากต่างประเทศที่นำเข้ามาในราชอาณาจักรและได้ชำระอากรแล้ว หากนำเข้าในเขตประกอบการเสรี และภายหลังนำออกจากเขตประกอบการเสรีกลับเข้ามาใช้ในราชอาณาจักร โดยไม่เปลี่ยนแปลงลักษณะหรือรูปร่างแต่อย่างใด จะได้รับการยกเว้นอากร ทั้งนี้จะต้องมีหนังสืออนุญาตจากการนิคมอุตสาหกรรมแห่งประเทศไทยมาแสดงด้วย
@@ -94,5 +94,5 @@ http://www.ieat.go.th
 **หมายเลขโทรศัพท์ :** 02-667-5963 หรือ 02-667-6623  
 **อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjgxMjg2MTBdfQ==
+eyJoaXN0b3J5IjpbODc5NjcwODIzXX0=
 -->
