KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
@@ -60,7 +60,8 @@
 	- ผู้นำของเข้าซึ่งการนิคมอุตสาหกรรมแห่งประเทศไทยมีหนังสือรับรองว่าเป็นผู้ประกอบการในนิคมอุตสาหกรรม ซึ่งเป็นผู้ดำเนินการขนย้ายสินค้า จะต้องทำหนังสือสัญญาประกันไว้กับกรมศุลกากรตามแบบที่กำหนด และการขนส่งต้องไปตาม เส้นทางที่กรมศุลกากรกำหนดด้วย
 
 2.  พิธีการศุลกากรในเขตอุตสาหกรรมทั่วไป
-ถ้าผู้ประกอบการในเขตอุตสาหกรรมทั่วไปประสงค์จะปฏิบัติพิธีการ ณ สำนักงานศุลกากรประจำนิคมอุตสาหกรรมให้ปฏิบัติเช่นเดียวกับพิธีการศุลกากรในเขตประกอบการเสรี โดยมีหลักฐานแสดงว่าเป็นผู้ประกอบการเขตอุตสาหกรรมทั่วไปของการนิคมอุตสาหกรรม มาแสดงต่อเจ้าหน้าที่ด้วย4.  ความรับผิดชอบในการขนส่งออกจากท่าหรือที่นำเข้ามายังนิคมอุตสาหกรรม
+ถ้าผู้ประกอบการในเขตอุตสาหกรรมทั่วไปประสงค์จะปฏิบัติพิธีการ ณ สำนักงานศุลกากรประจำนิคมอุตสาหกรรมให้ปฏิบัติเช่นเดียวกับพิธีการศุลกากรในเขตประกอบการเสรี โดยมีหลักฐานแสดงว่าเป็นผู้ประกอบการเขตอุตสาหกรรมทั่วไปของการนิคมอุตสาหกรรม มาแสดงต่อเจ้าหน้าที่ด้วย
+3.  ความรับผิดชอบในการขนส่งออกจากท่าหรือที่นำเข้ามายังนิคมอุตสาหกรรม
 ผู้นำของเข้าจะต้องเป็นผู้รับผิดชอบหากเกิดความเสียหายต่อค่าภาษีอากร ค่าภาระติดพันหรือความเสียหายอื่นใดตามที่ได้ทำสัญญาประกันไว้ต่อกรมศุลกากร5.  การนำของออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในประเทศ
 
 	-   ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศได้ โดยผู้มีภาระหน้าที่ในการชำระค่าภาษีอากรต้องยื่นใบขนสินค้าขาเข้า และหนังสืออนุญาตการนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศของ กนอ. ต่อสำนักงานศุลกากรประจำนิคมฯ
@@ -81,9 +82,10 @@
 
   
 7.  การนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี
-ผู้ประกอบการสามารถการนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี ได้โดยยื่นคำร้องขอนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี (กศก.122) ต่อเจ้าหน้าที่ศุลกากรประจำนิคมอุตสาหกรรม13.  ของที่นำเข้าเขตประกอบการเสรีเพื่อซ่อมและนำกลับออกไปโดยยกเว้นอากรตาม พ.ร.บ. พิกัดอัตราศุลกากร พ.ศ. 2530 ภาค 4 ประเภท 2
+ผู้ประกอบการสามารถการนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี ได้โดยยื่นคำร้องขอนำสินค้าในราชอาณาจักรเข้าไปในเขตประกอบการเสรี (กศก.122) ต่อเจ้าหน้าที่ศุลกากรประจำนิคมอุตสาหกรรม
+8.  ของที่นำเข้าเขตประกอบการเสรีเพื่อซ่อมและนำกลับออกไปโดยยกเว้นอากรตาม พ.ร.บ. พิกัดอัตราศุลกากร พ.ศ. 2530 ภาค 4 ประเภท 2
 จะต้องเป็นของที่นำเข้ามาในราชอาณาจักรโดยชำระภาษีอากรครบถ้วนแล้ว และจะต้องได้รับอนุญาตจากการนิคมอุตสาหกรรมแห่งประเทศไทย (กนอ.) ด้วย14.  ของที่นำเข้าเขตประกอบการเสรี และนำกลับเข้ามาในราชอาณาจักรโดยได้รับยกเว้นอากร
-ของในราชอาณาจักรหรือของจากต่างประเทศที่นำเข้ามาในราชอาณาจักรและได้ชำระอากรแล้ว หากนำเข้าในเขตประกอบการเสรี และภายหลังนำออกจากเขตประกอบการเสรีกลับเข้ามาใช้ในราชอาณาจักร โดยไม่เปลี่ยนแปลงลักษณะหรือรูปร่างแต่อย่างใด จะได้รับการยกเว้นอากร ทั้งนี้จะต้องมีหนังสืออนุญาตจากการนิคมอุตสาหกรรมแห่งประเทศไทยมาแสดงด้วย
+9. ของในราชอาณาจักรหรือของจากต่างประเทศที่นำเข้ามาในราชอาณาจักรและได้ชำระอากรแล้ว หากนำเข้าในเขตประกอบการเสรี และภายหลังนำออกจากเขตประกอบการเสรีกลับเข้ามาใช้ในราชอาณาจักร โดยไม่เปลี่ยนแปลงลักษณะหรือรูปร่างแต่อย่างใด จะได้รับการยกเว้นอากร ทั้งนี้จะต้องมีหนังสืออนุญาตจากการนิคมอุตสาหกรรมแห่งประเทศไทยมาแสดงด้วย
 
 **หน่วยงานที่ให้บริการ**  
 การนิคมอุตสาหกรรมแห่งประเทศไทย (กนอ.)  
@@ -94,5 +96,5 @@ http://www.ieat.go.th
 **หมายเลขโทรศัพท์ :** 02-667-5963 หรือ 02-667-6623  
 **อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODc5NjcwODIzXX0=
+eyJoaXN0b3J5IjpbLTM2MTM4NTc4N119
 -->
