KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/เขตประกอบการเสรี.md
@@ -62,7 +62,8 @@
 2.  พิธีการศุลกากรในเขตอุตสาหกรรมทั่วไป
 ถ้าผู้ประกอบการในเขตอุตสาหกรรมทั่วไปประสงค์จะปฏิบัติพิธีการ ณ สำนักงานศุลกากรประจำนิคมอุตสาหกรรมให้ปฏิบัติเช่นเดียวกับพิธีการศุลกากรในเขตประกอบการเสรี โดยมีหลักฐานแสดงว่าเป็นผู้ประกอบการเขตอุตสาหกรรมทั่วไปของการนิคมอุตสาหกรรม มาแสดงต่อเจ้าหน้าที่ด้วย
 3.  ความรับผิดชอบในการขนส่งออกจากท่าหรือที่นำเข้ามายังนิคมอุตสาหกรรม
-ผู้นำของเข้าจะต้องเป็นผู้รับผิดชอบหากเกิดความเสียหายต่อค่าภาษีอากร ค่าภาระติดพันหรือความเสียหายอื่นใดตามที่ได้ทำสัญญาประกันไว้ต่อกรมศุลกากร5.  การนำของออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในประเทศ
+ผู้นำของเข้าจะต้องเป็นผู้รับผิดชอบหากเกิดความเสียหายต่อค่าภาษีอากร ค่าภาระติดพันหรือความเสียหายอื่นใดตามที่ได้ทำสัญญาประกันไว้ต่อกรมศุลกากร
+4.  การนำของออกจากเขตประกอบการเสรีเพื่อใช้หรือจำหน่ายในประเทศ
 
 	-   ผู้ประกอบการสามารถนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศได้ โดยผู้มีภาระหน้าที่ในการชำระค่าภาษีอากรต้องยื่นใบขนสินค้าขาเข้า และหนังสืออนุญาตการนำของออกจากเขตประกอบการเสรี เพื่อใช้หรือจำหน่ายในประเทศของ กนอ. ต่อสำนักงานศุลกากรประจำนิคมฯ
 	- สำหรับบัญชีราคาสินค้า ให้สำแดงราคาซื้อขายเป็นเงินบาท โดยกรมศุลกากรจะดำเนินการกับใบขนสินค้าขาเข้าเสมือนหนึ่งการนำของเข้าจากต่างประเทศ และของนั้นจะต้องเสียค่าธรรมเนียมพิเศษตามกฎหมายว่าด้วยการส่งเสริมการลงทุน อากรขาเข้า และภาษีสรรพสามิต ภาษีเพื่อมหาดไทย และภาษีมูลค่าเพิ่มตามสภาพ ราคา และอัตราภาษีอากรที่เป็นอยู่ในวันที่นำของออกจากเขตประกอบการเสรี โดยถือเสมือนว่าได้นำเข้ามาในราชอาณาจักรในวันที่นำออกจากเขตประกอบการเสรี
@@ -96,5 +97,5 @@ http://www.ieat.go.th
 **หมายเลขโทรศัพท์ :** 02-667-5963 หรือ 02-667-6623  
 **อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM2MTM4NTc4N119
+eyJoaXN0b3J5IjpbMjQ1NDI5MTEyXX0=
 -->
