KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -5,23 +5,24 @@
 การชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกที่ผลิตในราชอาณาจักร
 ## คำจำกัดความที่สำคัญในการชดเชยค่าภาษีอากร
 
-- คำว่า "สินค้า" หมายความว่า สินค้าที่ผลิตในราชอาณาจักร
+* คำว่า "สินค้า" หมายความว่า สินค้าที่ผลิตในราชอาณาจักร
 * คำว่า "ผลิต" หมายความว่า ประกอบ แปรรูป แปรสภาพ หรือทำการอย่างใดอย่างหนึ่งให้มีขึ้น ซึ่งสินค้าไม่ว่าด้วยวิธีใดๆ
-คำว่า "เงินชดเชย" หมายความว่า เงินที่จะจ่ายชดเชยค่าภาษีอากรซึ่งมีอยู่ในต้นทุนการผลิตสินค้าส่งออกให้แก่ผู้มีสิทธิได้รับเงินชดเชยในรูปของบัตรภาษีตามพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ. 2524
-คำว่า "อัตราเงินชดเชยค่าภาษีอากร" หมายความว่า อัตราเงินชดเชยสำหรับชนิดและประเภทสินค้าที่จะได้รับเงินชดเชยค่าภาษีอากรตามที่คณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรได้ประกาศในราชกิจจานุเบกษา
-คำว่า "การส่งสินค้าออก" หมายความว่า การส่งของออกตามกฎหมายว่าด้วยศุลกากร รวมถึงการขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ และการขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
+* คำว่า "เงินชดเชย" หมายความว่า เงินที่จะจ่ายชดเชยค่าภาษีอากรซึ่งมีอยู่ในต้นทุนการผลิตสินค้าส่งออกให้แก่ผู้มีสิทธิได้รับเงินชดเชยในรูปของบัตรภาษีตามพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ. 2524
+* คำว่า "อัตราเงินชดเชยค่าภาษีอากร" หมายความว่า อัตราเงินชดเชยสำหรับชนิดและประเภทสินค้าที่จะได้รับเงินชดเชยค่าภาษีอากรตามที่คณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรได้ประกาศในราชกิจจานุเบกษา
+* คำว่า "การส่งสินค้าออก" หมายความว่า การส่งของออกตามกฎหมายว่าด้วยศุลกากร รวมถึงการขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ และการขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
 
-ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ได้แก่
-ผู้ทำการส่งออกตามกฎหมายว่าด้วยศุลกากร หรือผู้ที่ขายสินค้าภายในประเทศให้แก่ ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ หรือผู้ที่ขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้านั้นเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
-ผู้มีสิทธิได้รับเงินชดเชยจะต้องไม่ได้ใช้สิทธิคืนหรือยกเว้นหรือลดหย่อนภาษีอากร ตามกฎหมายศุลกากรและกฎหมายอื่นสำหรับสินค้าส่งออก
-การส่งออกไปจำหน่ายยังต่างประเทศต้องปฏิบัติให้ถูกต้องครบถ้วนตามกฎหมายศุลกากรและได้รับชำระเงินค่าขายสินค้าจากต่างประเทศ ถ้าหากเป็นการส่งออกเพื่อวัตถุประสงค์อื่นที่ไม่ใช่ทางการค้าเช่น การส่งออกเพียงเพื่อเป็นตัวอย่าง หรือเพื่อการวิเคราะห์ หรือเพื่อการอื่นที่มิได้จำหน่าย ไม่สามารถขอรับเงินชดเชยได้
+## ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร 
 
-ผู้ไม่มีสิทธิได้รับเงินชดเชยค่าภาษีอากร
+1. ผู้ทำการส่งออกตามกฎหมายว่าด้วยศุลกากร หรือผู้ที่ขายสินค้าภายในประเทศให้แก่ ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ หรือผู้ที่ขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้านั้นเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
+2. ผู้มีสิทธิได้รับเงินชดเชยจะต้องไม่ได้ใช้สิทธิคืนหรือยกเว้นหรือลดหย่อนภาษีอากร ตามกฎหมายศุลกากรและกฎหมายอื่นสำหรับสินค้าส่งออก
+3. การส่งออกไปจำหน่ายยังต่างประเทศต้องปฏิบัติให้ถูกต้องครบถ้วนตามกฎหมายศุลกากรและได้รับชำระเงินค่าขายสินค้าจากต่างประเทศ ถ้าหากเป็นการส่งออกเพื่อวัตถุประสงค์อื่นที่ไม่ใช่ทางการค้าเช่น การส่งออกเพียงเพื่อเป็นตัวอย่าง หรือเพื่อการวิเคราะห์ หรือเพื่อการอื่นที่มิได้จำหน่าย ไม่สามารถขอรับเงินชดเชยได้
+
+## ผู้ไม่มีสิทธิได้รับเงินชดเชยค่าภาษีอากร
 ผู้ไม่มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ได้แก่ผู้ส่งออกที่ได้ใช้สิทธิขอคืนหรือยกเว้นหรือลดหย่อนอากรขาเข้าสำหรับของที่ส่งออกที่ใช้สิทธิประโยชน์ ดังต่อไปนี้
-การขอคืนอากรตามมาตรา 29 ตามกฎหมายว่าด้วยศุลกากร
-การยกเว้นอากรขาเข้าแก่ของที่ปล่อยออกไปจากคลังสินค้าทัณฑ์บน ประเภทโรงผลิตสินค้าเพื่อส่งออกไปนอกราชอาณาจักร ตามกฎหมายว่าด้วยศุลกากร
-การยกเว้นอากรขาเข้าเกี่ยวกับเขตประกอบการเสรี ตามกฎหมาย ว่าด้วยการนิคมอุตสาหกรรมแห่งประเทศไทย
-การยกเว้นหรือลดหย่อนอากรขาเข้าที่ไม่ใช่เครื่องจักร ตามกฎหมายว่าด้วยส่งเสริมการลงทุน
+1. การขอคืนอากรตามมาตรา 29 ตามกฎหมายว่าด้วยศุลกากร
+2. การยกเว้นอากรขาเข้าแก่ของที่ปล่อยออกไปจากคลังสินค้าทัณฑ์บน ประเภทโรงผลิตสินค้าเพื่อส่งออกไปนอกราชอาณาจักร ตามกฎหมายว่าด้วยศุลกากร
+3. การยกเว้นอากรขาเข้าเกี่ยวกับเขตประกอบการเสรี ตามกฎหมาย ว่าด้วยการนิคมอุตสาหกรรมแห่งประเทศไทย
+4. การยกเว้นหรือลดหย่อนอากรขาเข้าที่ไม่ใช่เครื่องจักร ตามกฎหมายว่าด้วยส่งเสริมการลงทุน
 การยกเว้นอากรขาเข้าเกี่ยวกับเขตปลอดอากรตามหมวด 6 ตามกฎหมายว่าด้วยศุลกากร
 
 ชนิดสินค้าที่ไม่ได้รับเงินชดเชย
@@ -134,5 +135,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQzNzU4NzY1N119
+eyJoaXN0b3J5IjpbLTE2OTg4ODE2NTVdfQ==
 -->
