KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -23,15 +23,16 @@
 2. การยกเว้นอากรขาเข้าแก่ของที่ปล่อยออกไปจากคลังสินค้าทัณฑ์บน ประเภทโรงผลิตสินค้าเพื่อส่งออกไปนอกราชอาณาจักร ตามกฎหมายว่าด้วยศุลกากร
 3. การยกเว้นอากรขาเข้าเกี่ยวกับเขตประกอบการเสรี ตามกฎหมาย ว่าด้วยการนิคมอุตสาหกรรมแห่งประเทศไทย
 4. การยกเว้นหรือลดหย่อนอากรขาเข้าที่ไม่ใช่เครื่องจักร ตามกฎหมายว่าด้วยส่งเสริมการลงทุน
-การยกเว้นอากรขาเข้าเกี่ยวกับเขตปลอดอากรตามหมวด 6 ตามกฎหมายว่าด้วยศุลกากร
+5. การยกเว้นอากรขาเข้าเกี่ยวกับเขตปลอดอากรตามหมวด 6 ตามกฎหมายว่าด้วยศุลกากร
 
-ชนิดสินค้าที่ไม่ได้รับเงินชดเชย
-สินค้าส่งออกที่ไม่ได้รับเงินชดเชย ได้แก่สินค้าส่งออกดังต่อไปนี้
-สินค้าที่ไม่ได้ผลิตในราชอาณาจักร
-แร่ ตามกฎหมายว่าด้วยแร่
-สินค้าที่ต้องเสียอากรหรือค่าธรรมเนียมเมื่อส่งออก
-สินค้าที่คณะกรรมการฯกำหนดไม่ให้ได้รับเงินชดเชย ดังนี้
-ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 3/2527 ได้แก่ผลิตภัณฑ์ที่ทำด้วยไม้สัก พยุง ชิงชัง ประดู่ มะค่าโมง ขะเจ๊า(สาธร) และ มะเกลือ ที่ไม่เหมาะจะนำไปแปรรูปเป็นอย่างอื่น
+## ชนิดสินค้าที่ไม่ได้รับเงินชดเชย
+
+1. สินค้าส่งออกที่ไม่ได้รับเงินชดเชย ได้แก่สินค้าส่งออกดังต่อไปนี้
+2. สินค้าที่ไม่ได้ผลิตในราชอาณาจักร
+3. แร่ ตามกฎหมายว่าด้วยแร่
+4. สินค้าที่ต้องเสียอากรหรือค่าธรรมเนียมเมื่อส่งออก
+5. สินค้าที่คณะกรรมการฯกำหนดไม่ให้ได้รับเงินชดเชย ดังนี้
+6. ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 3/2527 ได้แก่ผลิตภัณฑ์ที่ทำด้วยไม้สัก พยุง ชิงชัง ประดู่ มะค่าโมง ขะเจ๊า(สาธร) และ มะเกลือ ที่ไม่เหมาะจะนำไปแปรรูปเป็นอย่างอื่น
 ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 1/2535 ได้แก่
 ข้าวเจ้า ข้าวเหนียว ไม่ว่าจะเป็นข้าวเปลือก ข้าวขาว ข้าวกล้อง ข้าวนึ่ง ข้าวอบแห้ง ปลายข้าว หรือรำ
 ข้าวฟ่าง ข้าวสาลี
@@ -135,5 +136,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2OTg4ODE2NTVdfQ==
+eyJoaXN0b3J5IjpbLTIwNTIxMDI2NjFdfQ==
 -->
