KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -27,12 +27,13 @@
 
 ## ชนิดสินค้าที่ไม่ได้รับเงินชดเชย
 
-1. สินค้าส่งออกที่ไม่ได้รับเงินชดเชย ได้แก่สินค้าส่งออกดังต่อไปนี้
-2. สินค้าที่ไม่ได้ผลิตในราชอาณาจักร
-3. แร่ ตามกฎหมายว่าด้วยแร่
-4. สินค้าที่ต้องเสียอากรหรือค่าธรรมเนียมเมื่อส่งออก
-5. สินค้าที่คณะกรรมการฯกำหนดไม่ให้ได้รับเงินชดเชย ดังนี้
-6. ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 3/2527 ได้แก่ผลิตภัณฑ์ที่ทำด้วยไม้สัก พยุง ชิงชัง ประดู่ มะค่าโมง ขะเจ๊า(สาธร) และ มะเกลือ ที่ไม่เหมาะจะนำไปแปรรูปเป็นอย่างอื่น
+สินค้าส่งออกที่ไม่ได้รับเงินชดเชย ได้แก่สินค้าส่งออกดังต่อไปนี้
+
+1. สินค้าที่ไม่ได้ผลิตในราชอาณาจักร
+2. แร่ ตามกฎหมายว่าด้วยแร่
+3. สินค้าที่ต้องเสียอากรหรือค่าธรรมเนียมเมื่อส่งออก
+4. สินค้าที่คณะกรรมการฯกำหนดไม่ให้ได้รับเงินชดเชย ดังนี้
+5. ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 3/2527 ได้แก่ผลิตภัณฑ์ที่ทำด้วยไม้สัก พยุง ชิงชัง ประดู่ มะค่าโมง ขะเจ๊า(สาธร) และ มะเกลือ ที่ไม่เหมาะจะนำไปแปรรูปเป็นอย่างอื่น
 ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 1/2535 ได้แก่
 ข้าวเจ้า ข้าวเหนียว ไม่ว่าจะเป็นข้าวเปลือก ข้าวขาว ข้าวกล้อง ข้าวนึ่ง ข้าวอบแห้ง ปลายข้าว หรือรำ
 ข้าวฟ่าง ข้าวสาลี
@@ -136,5 +137,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNTIxMDI2NjFdfQ==
+eyJoaXN0b3J5IjpbNjAwMzc4OTMzXX0=
 -->
