KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -34,12 +34,13 @@
 3. สินค้าที่ต้องเสียอากรหรือค่าธรรมเนียมเมื่อส่งออก
 4. สินค้าที่คณะกรรมการฯกำหนดไม่ให้ได้รับเงินชดเชย ดังนี้
 5. ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 3/2527 ได้แก่ผลิตภัณฑ์ที่ทำด้วยไม้สัก พยุง ชิงชัง ประดู่ มะค่าโมง ขะเจ๊า(สาธร) และ มะเกลือ ที่ไม่เหมาะจะนำไปแปรรูปเป็นอย่างอื่น
-ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 1/2535 ได้แก่
-ข้าวเจ้า ข้าวเหนียว ไม่ว่าจะเป็นข้าวเปลือก ข้าวขาว ข้าวกล้อง ข้าวนึ่ง ข้าวอบแห้ง ปลายข้าว หรือรำ
+6. ประกาศคณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรที่ 1/2535 ได้แก่
+	- ข้าวเจ้า ข้าวเหนียว ไม่ว่าจะเป็นข้าวเปลือก ข้าวขาว ข้าวกล้อง ข้าวนึ่ง ข้าวอบแห้ง ปลายข้าว หรือรำ
 ข้าวฟ่าง ข้าวสาลี
-ข้าวโพด ไม่ว่าเป็นฝักหรือเมล็ด อบ บด ทำให้เป็นซีกหรือชิ้น แต่ไม่รวมถึงแป้งข้าวโพด หรือข้าวโพด ที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมฝักข้าวโพดอ่อนที่เป็นฝัก)
-หนังสัตว์ที่ยังไม่ได้ฟอก รวมทั้งเศษตัด และเศษ
-ยางของต้นยางตระกูลฮีเวีย ไม่ว่าจะเป็นยางแผ่น ยางแท่ง เศษยาง ยางก้อน น้ำยาง หรือขี้ยางจากต้นยาง ยางปนดิน หรือปนเปลือกต้นยาง รวมทั้งยางในลักษณะอื่นซึ่งยังอยู่ในสภาพวัตถุดิบ
+	- ข้าวโพด ไม่ว่าเป็นฝักหรือเมล็ด อบ บด ทำให้เป็นซีกหรือชิ้น แต่ไม่รวมถึงแป้งข้าวโพด หรือข้าวโพด ที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมฝักข้าวโพดอ่อนที่เป็นฝัก)
+	- หนังสัตว์ที่ยังไม่ได้ฟอก รวมทั้งเศษตัด และเศษ
+ยางของต้นยางตระกูลฮีเวีย ไม่ว่าจะเป็นยางแผ่น ยางแท่ง เศษยาง ยางก้อน น้ำยาง หรือขี้ยางจากต้นยาง 
+- ยางปนดิน หรือปนเปลือกต้นยาง รวมทั้งยางในลักษณะอื่นซึ่งยังอยู่ในสภาพวัตถุดิบ
 รัง ไหม เส้นไหมดิบที่ยังมิได้ตีเกลียว และเส้นด้ายที่ทำด้วยไหม ขี้ไหม หรือเศษไหม
 ถั่วทุกชนิด ไม่ว่ากะเทาะเปลือก หรือทั้งเปลือก บด ทำให้เป็นซีกหรือชิ้น รวมทั้งกากถั่ว แต่ไม่รวมถึง แป้งถั่ว หรือถั่วที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมถึงถั่วฝักยาวที่เป็นฝัก)
 เมล็ดละหุ่ง
@@ -137,5 +138,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjAwMzc4OTMzXX0=
+eyJoaXN0b3J5IjpbLTIxMzY4OTM2ODldfQ==
 -->
