--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -40,23 +40,25 @@
 	- ข้าวโพด ไม่ว่าเป็นฝักหรือเมล็ด อบ บด ทำให้เป็นซีกหรือชิ้น แต่ไม่รวมถึงแป้งข้าวโพด หรือข้าวโพด ที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมฝักข้าวโพดอ่อนที่เป็นฝัก)
 	- หนังสัตว์ที่ยังไม่ได้ฟอก รวมทั้งเศษตัด และเศษ
 	- ยางของต้นยางตระกูลฮีเวีย ไม่ว่าจะเป็นยางแผ่น ยางแท่ง เศษยาง ยางก้อน น้ำยาง หรือขี้ยางจากต้นยาง - ยางปนดิน หรือปนเปลือกต้นยาง รวมทั้งยางในลักษณะอื่นซึ่งยังอยู่ในสภาพวัตถุดิบ
-- รัง ไหม เส้นไหมดิบที่ยังมิได้ตีเกลียว และเส้นด้ายที่ทำด้วยไหม ขี้ไหม หรือเศษไหม
-- ถั่วทุกชนิด ไม่ว่ากะเทาะเปลือก หรือทั้งเปลือก บด ทำให้เป็นซีกหรือชิ้น รวมทั้งกากถั่ว แต่ไม่รวมถึง แป้งถั่ว หรือถั่วที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมถึงถั่วฝักยาวที่เป็นฝัก)
-- เมล็ดละหุ่ง
-- ปอทุกชนิดรวมทั้งเศษปอ ไม่ว่าดิบหรือผ่านกรรมวิธีใดๆแล้ว รวมทั้งปอที่เป็นเส้นใย แต่ไม่รวมถึงปอที่ปั่นเป็นเส้นหรือวัตถุประดิษฐ์อื่นจากปอ
+	- รัง ไหม เส้นไหมดิบที่ยังมิได้ตีเกลียว และเส้นด้ายที่ทำด้วยไหม ขี้ไหม หรือเศษไหม
+	- ถั่วทุกชนิด ไม่ว่ากะเทาะเปลือก หรือทั้งเปลือก บด ทำให้เป็นซีกหรือชิ้น รวมทั้งกากถั่ว แต่ไม่รวมถึง แป้งถั่ว หรือถั่วที่ผ่านกรรมวิธีเพื่อทำเป็นอาหารนอกจากอาหารสัตว์ (ไม่รวมถึงถั่วฝักยาวที่เป็นฝัก)
+	- เมล็ดละหุ่ง
+	- ปอทุกชนิดรวมทั้งเศษปอ ไม่ว่าดิบหรือผ่านกรรมวิธีใดๆแล้ว รวมทั้งปอที่เป็นเส้นใย แต่ไม่รวมถึงปอที่ปั่นเป็นเส้นหรือวัตถุประดิษฐ์อื่นจากปอ
 	- ครั่งดิบ ครั่งเม็ด
 	- มันสำปะหลัง ไม่ว่าเป็นหัว หรือจัดทำเป็นผง แป้ง เส้น ก้อน แท่ง ฝอย ชิ้น เม็ด หรือจัดทำในลักษณะอื่น รวมทั้งกากมันสำปะหลัง
 	- น้ำตาลทราย น้ำตาลทรายดิบ หรือน้ำตาลดิบ
-กากน้ำตาล กากมะพร้าว
-ฝ้าย นุ่น งิ้ว ง้าว ไม่ว่าทั้งลูก กะเทาะเปลือกหรือแยกส่วนแล้ว รวมทั้งเมล็ด แต่ไม่รวมถึงปุยฝ้ายที่แยกเมล็ดออกแล้ว
-สัตว์ทุกชนิดที่มิใช่สัตว์น้ำและสัตว์ปีก รวมทั้งวัตถุพลอยได้จากสัตว์
-สัตว์น้ำที่มีชีวิต
-ทองคำ แพลทินัม ทองขาว เงิน นาค โลหะเจือของวัตถุดังกล่าว รวมทั้งสิ่งทำเทียมวัตถุหรือสินค้าดังกล่าวด้วย แต่ไม่รวมถึงสินค้าที่เป็นสิ่งที่ใช้ประดับกายหรือประดับเครื่องแต่งกาย
+	- กากน้ำตาล กากมะพร้าว
+	- ฝ้าย นุ่น งิ้ว ง้าว ไม่ว่าทั้งลูก กะเทาะเปลือกหรือแยกส่วนแล้ว รวมทั้งเมล็ด แต่ไม่รวมถึงปุยฝ้ายที่แยกเมล็ดออกแล้ว
+	- สัตว์ทุกชนิดที่มิใช่สัตว์น้ำและสัตว์ปีก รวมทั้งวัตถุพลอยได้จากสัตว์
+	- สัตว์น้ำที่มีชีวิต
+	- ทองคำ แพลทินัม ทองขาว เงิน นาค โลหะเจือของวัตถุดังกล่าว รวมทั้งสิ่งทำเทียมวัตถุหรือสินค้าดังกล่าวด้วย แต่ไม่รวมถึงสินค้าที่เป็นสิ่งที่ใช้ประดับกายหรือประดับเครื่องแต่งกาย
 
-ขั้นตอนการขอชดเชยค่าภาษีอากร
+## ขั้นตอนการขอชดเชยค่าภาษีอากร
+
 ก่อนการส่งออกผู้ประสงค์จะขอใช้สิทธิในการขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรสำหรับการผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์แบบไร้เอกสาร ให้ปฏิบัติดังนี้
-ให้ทำการลงทะเบียนเป็นผู้ผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์ โดยลงทะเบียนเป็นผู้ประสงค์ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบคำร้องมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ณ ฝ่ายทะเบียนและสิทธิพิเศษ กลุ่มงานมาตรฐานพิธีการและราคาศุลกากร หรือฝ่ายบริหารทั่วไปสำนัก/สำนักงานศุลกากร หรือด่านศุลกากร
-ให้ผู้ส่งของออกที่ใช้สิทธิขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออก จัดทำข้อมูลใบขนสินค้าขาออกตามมาตรฐานที่ศุลกากรกำหนดแล้วส่งข้อมูลทางอิเล็กทรอนิกส์เข้าสู่ระบบคอมพิวเตอร์ของศุลกากร
+1. ให้ทำการลงทะเบียนเป็นผู้ผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์ โดยลงทะเบียนเป็นผู้ประสงค์ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบคำร้องมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ณ ฝ่ายทะเบียนและสิทธิพิเศษ กลุ่มงานมาตรฐานพิธีการและราคาศุลกากร หรือฝ่ายบริหารทั่วไปสำนัก/สำนักงานศุลกากร หรือด่านศุลกากร.
+
+3. ให้ผู้ส่งของออกที่ใช้สิทธิขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออก จัดทำข้อมูลใบขนสินค้าขาออกตามมาตรฐานที่ศุลกากรกำหนดแล้วส่งข้อมูลทางอิเล็กทรอนิกส์เข้าสู่ระบบคอมพิวเตอร์ของศุลกากร
 ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิชดเชยอากร (Compensation) ต้องมีค่าเท่ากับ Y เท่านั้น
 ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิพิเศษ ( Privilege Code ) ให้ระบุค่าเป็น " 003 "
 ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องอัตราอากรขาออก ( Export Tariff ) ให้ระบุค่าเป็น " 9 PART 3 "
@@ -137,5 +139,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMTcyODExOTFdfQ==
+eyJoaXN0b3J5IjpbOTg1NzIzMzAyXX0=
 -->
