--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -56,20 +56,20 @@
 ## ขั้นตอนการขอชดเชยค่าภาษีอากร
 
 ก่อนการส่งออกผู้ประสงค์จะขอใช้สิทธิในการขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรสำหรับการผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์แบบไร้เอกสาร ให้ปฏิบัติดังนี้
-1. ให้ทำการลงทะเบียนเป็นผู้ผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์ โดยลงทะเบียนเป็นผู้ประสงค์ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบคำร้องมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ณ ฝ่ายทะเบียนและสิทธิพิเศษ กลุ่มงานมาตรฐานพิธีการและราคาศุลกากร หรือฝ่ายบริหารทั่วไปสำนัก/สำนักงานศุลกากร หรือด่านศุลกากร.
+1. ให้ทำการลงทะเบียนเป็นผู้ผ่านพิธีการศุลกากรทางอิเล็กทรอนิกส์ โดยลงทะเบียนเป็นผู้ประสงค์ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบคำร้องมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ณ ฝ่ายทะเบียนและสิทธิพิเศษ กลุ่มงานมาตรฐานพิธีการและราคาศุลกากร หรือฝ่ายบริหารทั่วไปสำนัก/สำนักงานศุลกากร หรือด่านศุลกากร.  
 
-3. ให้ผู้ส่งของออกที่ใช้สิทธิขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออก จัดทำข้อมูลใบขนสินค้าขาออกตามมาตรฐานที่ศุลกากรกำหนดแล้วส่งข้อมูลทางอิเล็กทรอนิกส์เข้าสู่ระบบคอมพิวเตอร์ของศุลกากร
-ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิชดเชยอากร (Compensation) ต้องมีค่าเท่ากับ Y เท่านั้น
-ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิพิเศษ ( Privilege Code ) ให้ระบุค่าเป็น " 003 "
-ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องอัตราอากรขาออก ( Export Tariff ) ให้ระบุค่าเป็น " 9 PART 3 "
+2. ให้ผู้ส่งของออกที่ใช้สิทธิขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออก จัดทำข้อมูลใบขนสินค้าขาออกตามมาตรฐานที่ศุลกากรกำหนดแล้วส่งข้อมูลทางอิเล็กทรอนิกส์เข้าสู่ระบบคอมพิวเตอร์ของศุลกากร
+	- ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิชดเชยอากร (Compensation) ต้องมีค่าเท่ากับ Y เท่านั้น
+	- ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องการใช้สิทธิพิเศษ ( Privilege Code ) ให้ระบุค่าเป็น " 003 "
+	- ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องอัตราอากรขาออก ( Export Tariff ) ให้ระบุค่าเป็น " 9 PART 3 "
 ในส่วนรายละเอียดของใบขนสินค้าขาออกแต่ละรายการ (Export Declaration Detail) ในช่องพิกัดศุลกากร ( Tariff Code ) ให้บันทึกพิกัดศุลกากรให้ตรงกับชนิดของของที่ส่งออก
 
-การยื่นขอรับเงินชดเชยค่าภาษีอากร
+## การยื่นขอรับเงินชดเชยค่าภาษีอากร
 การยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร ให้ยื่นที่ ฝ่ายชดเชยอากร ส่วนชดเชยค่าภาษีอากร สำนักสิทธิประโยชน์ทางภาษีอากร สำหรับกรณีเป็นผู้ขอรับเงินชดเชยค่าภาษีอากรที่ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรเป็นครั้งแรก ให้ยื่นหนังสือรับรองการจดทะเบียน นิติบุคคล กระทรวงพาณิชย์ และใบประกอบกิจการโรงงานที่ฝ่ายชดเชยอากร ก่อนยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากร และหากมีการเปลี่ยนแปลงในรายละเอียดของเอกสารดังกล่าวให้แจ้งการเปลี่ยนแปลงพร้อมทั้งยื่นเอกสารหลักฐานทุกครั้ง
-กรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ตามแบบ กศก.20/1 ภายใน 1 ปี นับตั้งแต่วันที่ส่งออกถึงวันที่ยื่นคำขอรับเงินชดเชยค่าภาษีอากร พร้อมเอกสารประกอบดังนี้
-แบบแสดงรายละเอียดของสินค้าที่ได้ส่งออกและขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.20/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร ทั้งนี้ แบบแสดงรายละเอียดของสินค้าตามแบบ กศก.20/1 ก ให้มีจำนวนใบขนสินค้าขาออกไม่เกิน 10 ใบขนฯ และไม่เกิน 100 รายการต่อหนึ่งชุดคำขอรับเงินชดเชยค่าภาษีอากร (กรณีใบขนฯ ฉบับใดมีมากกว่า 100 รายการ ให้ถือว่าชุดคำขอรับเงินชดเชยค่าภาษีอากรนั้นเป็นหนึ่งชุดคำขอฯ)
-บัญชีราคาสินค้า (Invoice)
-เอกสารหลักฐานแสดงการรับชำระเงินค่าขายสินค้าส่งออก สำเนาใบเข้าบัญชี (Credit Note/Credit Advice) หรือเอกสารหลักฐานการโอนเงินอื่นๆ ที่ระบุว่าได้มีการนำเงินตราต่างประเทศหรือสกุลเงินบาท เป็นค่าขายสินค้าที่ส่งออก ส่งมาจากต่างประเทศตามใบขนสินค้าขาออกเข้าบัญชี ซึ่งออกโดยธนาคารพาณิชย์หรือสถาบันการเงินที่ได้รับการรับรองจากธนาคารแห่งประเทศไทยให้ทำหน้าที่เหมือนธนาคารพาณิชย์ และเป็นสถาบันการเงินที่ได้รับชำระเงินค่าสินค้าโดยตรงจากต่างประเทศ ทั้งนี้เอกสารดังกล่าวจะต้องมีข้อความระบุชื่อผู้รับเงิน (ผู้ส่งของออก) เลขที่บัญชีราคาสินค้า (Invoice) แหล่งที่มาของเงิน จำนวนเงินตราต่างประเทศหรือเงินบาท ซึ่งมีผู้มีอำนาจลงนามของธนาคารพาณิชย์หรือสถาบันการเงิน ต้องลงลายมือชื่อรับรองความถูกต้อง โดยระบุชื่อ-สกุล ตำแหน่ง พร้อมประทับตราธนาคาร และผู้มีอำนาจลงนามของบริษัท ห้าง ร้าน ต้องลงลายมือชื่อพร้อมประทับตรา (ถ้ามี) เช่นเดียวกัน หากจำนวนเงินในหลักฐานดังกล่าวแสดงการชำระเงินค่าสินค้าตามบัญชีสินค้า (Invoice) หลายฉบับ ให้ระบุจำนวนเงินที่ชำระแต่ละบัญชีราคาสินค้า (Invoice) ให้ชัดเจน ซึ่งผู้มีอำนาจ ลงนามของธนาคารพาณิชย์หรือสถาบันการเงิน ต้องลงลายมือชื่อรับรองรายละเอียดดังกล่าวด้วย และให้ผู้ส่งออกยื่นเอกสารเพิ่มเติมในแต่ละกรณี ดังนี้
+1. กรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออก ตามแบบ กศก.20/1 ภายใน 1 ปี นับตั้งแต่วันที่ส่งออกถึงวันที่ยื่นคำขอรับเงินชดเชยค่าภาษีอากร พร้อมเอกสารประกอบดังนี้
+1. แบบแสดงรายละเอียดของสินค้าที่ได้ส่งออกและขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.20/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร ทั้งนี้ แบบแสดงรายละเอียดของสินค้าตามแบบ กศก.20/1 ก ให้มีจำนวนใบขนสินค้าขาออกไม่เกิน 10 ใบขนฯ และไม่เกิน 100 รายการต่อหนึ่งชุดคำขอรับเงินชดเชยค่าภาษีอากร (กรณีใบขนฯ ฉบับใดมีมากกว่า 100 รายการ ให้ถือว่าชุดคำขอรับเงินชดเชยค่าภาษีอากรนั้นเป็นหนึ่งชุดคำขอฯ)
+2. บัญชีราคาสินค้า (Invoice)
+3. เอกสารหลักฐานแสดงการรับชำระเงินค่าขายสินค้าส่งออก สำเนาใบเข้าบัญชี (Credit Note/Credit Advice) หรือเอกสารหลักฐานการโอนเงินอื่นๆ ที่ระบุว่าได้มีการนำเงินตราต่างประเทศหรือสกุลเงินบาท เป็นค่าขายสินค้าที่ส่งออก ส่งมาจากต่างประเทศตามใบขนสินค้าขาออกเข้าบัญชี ซึ่งออกโดยธนาคารพาณิชย์หรือสถาบันการเงินที่ได้รับการรับรองจากธนาคารแห่งประเทศไทยให้ทำหน้าที่เหมือนธนาคารพาณิชย์ และเป็นสถาบันการเงินที่ได้รับชำระเงินค่าสินค้าโดยตรงจากต่างประเทศ ทั้งนี้เอกสารดังกล่าวจะต้องมีข้อความระบุชื่อผู้รับเงิน (ผู้ส่งของออก) เลขที่บัญชีราคาสินค้า (Invoice) แหล่งที่มาของเงิน จำนวนเงินตราต่างประเทศหรือเงินบาท ซึ่งมีผู้มีอำนาจลงนามของธนาคารพาณิชย์หรือสถาบันการเงิน ต้องลงลายมือชื่อรับรองความถูกต้อง โดยระบุชื่อ-สกุล ตำแหน่ง พร้อมประทับตราธนาคาร และผู้มีอำนาจลงนามของบริษัท ห้าง ร้าน ต้องลงลายมือชื่อพร้อมประทับตรา (ถ้ามี) เช่นเดียวกัน หากจำนวนเงินในหลักฐานดังกล่าวแสดงการชำระเงินค่าสินค้าตามบัญชีสินค้า (Invoice) หลายฉบับ ให้ระบุจำนวนเงินที่ชำระแต่ละบัญชีราคาสินค้า (Invoice) ให้ชัดเจน ซึ่งผู้มีอำนาจ ลงนามของธนาคารพาณิชย์หรือสถาบันการเงิน ต้องลงลายมือชื่อรับรองรายละเอียดดังกล่าวด้วย และให้ผู้ส่งออกยื่นเอกสารเพิ่มเติมในแต่ละกรณี ดังนี้
 กรณีที่มีการรับชำระเงินค่าขายสินค้าที่ส่งออกเป็นเช็ค / ดราฟท์ของสถาบันการเงินต่างประเทศ ให้แนบสำเนาภาพถ่ายเช็ค / ดราฟท์ ของธนาคารพาณิชย์ที่ทำการแลกเปลี่ยนเงินตรารับรอง
 กรณีที่มีการชำระเงินค่าขายสินค้าที่ส่งออกเป็นเช็คเดินทาง ให้แนบสำเนาภาพถ่ายเช็คเดินทางที่ธนาคารพาณิชย์รับรอง และสำเนาภาพถ่ายหนังสือเดินทางเข้าประเทศไทย ของผู้ซื้อ
 กรณีที่มีการชำระเงินค่าขายสินค้าที่ส่งออกเป็นเงินสดด้วยสกุลเงินตราต่างประเทศ หรือสกุลเงินบาท ให้แนบหลักฐานการนำเงินเข้าประเทศ (Foreign Currency Declaration Form)ตามแบบของกรมศุลกากร โดยเจ้าหน้าที่ด่านศุลกากรเป็นผู้รับรอง และแนบสำเนาภาพถ่ายหนังสือเดินทางเข้าประเทศหรือสำเนาภาพถ่ายหลักฐานการผ่านแดนเข้ามาในประเทศของผู้เดินทาง พร้อมเอกสารนำเงินฝากเข้าบัญชีธนาคาร ระบุเลขที่บัญชีสินค้า
@@ -139,5 +139,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTg1NzIzMzAyXX0=
+eyJoaXN0b3J5IjpbNjU0MzgyOTFdfQ==
 -->
